small changes all around: Switched up buttons Changed icon size on dropdown to fix RBTC Took out fund hash in swap completed Center aligned the backupLinkPage

--- a/src/components/BackupLinkCard/BackupLinkCard.scss
+++ b/src/components/BackupLinkCard/BackupLinkCard.scss
@@ -6,6 +6,7 @@
     font-weight: bold;
     color: $color-text-1;
     padding-top: 35px;
+    text-align: center;
     
     img {
       width: 32px;
