--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -4,10 +4,12 @@
   font-weight: 600;
   position: relative;
 
-  &_whiteButton:hover {
+  &_whiteButton {
+    &:hover{
     background: white;
     border: 1px solid $color-primary-1;
     color: $color-primary-1;
+    }
   }
 
   &_wide {
