--- a/src/components/WalletConnected/WalletConnected.scss
+++ b/src/components/WalletConnected/WalletConnected.scss
@@ -23,7 +23,6 @@
   &_currencyBar {
     width: 150px;
     height: 21px;
-    background: grey;
     margin: 0 auto;
     margin-top: -5%;
     color: $secondary;
@@ -34,7 +33,6 @@
 
   &_wallet {
     border-radius: 10px;
-    background-color: $color-bg-secondary;
     padding: 40px 10px;
     margin: 10px 5px 20px;
 
