--- a/src/components/WalletDisplay/WalletDisplay.scss
+++ b/src/components/WalletDisplay/WalletDisplay.scss
@@ -49,6 +49,11 @@
     position: relative;
     top: -25px;
     background: none;
+    &:hover {
+      background: white;
+      color: $color-primary-1;
+      border: 1px solid $color-primary-1;
+    }
   }
 
   &_addressWhole {
@@ -74,10 +79,6 @@
     &.error {
       border: 1px solid $danger;
     }
-  }
-
-  &_hover:hover {
-    background: white;
   }
 
   &_errorMessage {
